--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.2",
     "expo": "~54.0.20",
